fixed recursive call of value changed methods of sliders; fixed number formatting of slider labels